--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.2",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "expo": "~52.0.6",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
@@ -33,7 +34,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.14"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
