--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.2",
+    "@rn-primitives/slot": "^1.1.0",
+    "@rn-primitives/tabs": "^1.1.0",
+    "@rn-primitives/types": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~52.0.6",
     "expo-constants": "~17.0.3",
@@ -25,6 +30,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.462.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -33,9 +39,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
+    "react-native-svg": "^15.9.0",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
