--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bandyresultatnative",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -11,24 +12,26 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/native": "^7.0.13",
     "@rn-primitives/slot": "^1.1.0",
     "@rn-primitives/tabs": "^1.1.0",
     "@rn-primitives/types": "^1.1.0",
-    "@tanstack/react-query": "^5.59.20",
-    "axios": "^1.7.7",
+    "@tanstack/react-query": "^5.62.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "~52.0.6",
+    "expo": "~52.0.14",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.5",
-    "expo-splash-screen": "~0.29.9",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.11",
+    "expo-secure-store": "^14.0.0",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "lucide-react-native": "^0.462.0",
     "nativewind": "^4.1.23",
@@ -36,21 +39,21 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
-    "react-native-svg": "^15.9.0",
-    "react-native-web": "~0.19.10",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.14",
+    "react-native-svg": "^15.10.0",
+    "react-native-web": "~0.19.13",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
+    "@babel/core": "^7.26.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/react-test-renderer": "^18.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
